# rust_graphql_api_boilerplate

./: Cargo.toml  Dockerfile  LICENSE  README.md  init_down.sql
migrations/2019-02-25-161051_user/: down.sql  up.sql
migrations/2019-02-27-071554_change_myuser_table_name/: down.sql  up.sql
migrations/2019-02-28-140157_auto_updated_at/: down.sql  up.sql
migrations/2019-02-28-143731_password/: down.sql  up.sql
migrations/2019-03-05-162403_create_myusers/: up.sql
src/: db.rs  gql.rs  gql_types.rs  jwt.rs  lib.rs  main.rs  models.rs  schema.rs  user.rs
