[package]
name = "rust_graphql_api_boilerplate"
version = "0.1.0"
authors = ["moondaddi <woonki.moon@gmail.com>"]
edition = "2018"

[dependencies]
warp= "0.1.13"
log = "0.4"
pretty_env_logger = "0.3"
juniper = "0.11.1"
diesel = { version = "1.4.1", features = [ "postgres", "chrono" ] }
dotenv = "0.13.0"
chrono = "0.4.6"
serde_json = "1.0.38"
serde_derive = "1.0.88"
failure = "0.1.5"
futures = "0.1.25"
serde = "1.0.88"
tokio-threadpool = "0.1.11"
bcrypt = "0.3.0"
jsonwebtoken = "5.0.1"
